--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,40 +43,21 @@ layout: default
 
   <!-- Post body: content and paginator -->
   <body>
+    <div class="columns">
+      <div class="column"></div>
+      <div class="column is-three-quarters">
+        {{ content }}
 
-    {{ content }}
+        <hr>
 
-    <hr>
+        {% include paginator.html %}
 
-    <!-- Paginator -->
-    <div class="columns is-mobile">
-
-      <div class="column">
-        {% if page.previous.url %}
-          <div class="container">
-            <a href="{{ page.previous.url | prepend: site.baseurl }}">
-              <p class="title is-5" style="margin: 0 0 0 0">
-                {{ page.previous.title }}
-              </p>
-            </a>
-            <p class="subtitle is-6">{{ page.previous.date | date: "%B %-d, %Y" }}</p>
-          </div>
-        {% endif %}
       </div>
-
       <div class="column">
-        {% if page.next.url %}
-          <div class="container" style="text-align:right">
-            <a href="{{ page.next.url | prepend: site.baseurl }}">
-              <p class="title is-5" style="margin: 0 0 0 0">
-                {{ page.next.title }}
-              </p>
-            </a>
-            <p class="subtitle is-6">{{ page.next.date | date: "%B %-d, %Y" }}</p>
-          </div>
-        {% endif %}
-      </div>
 
+      </div>
     </div>
+
+
   </body>
 </section>
